[gd_scene load_steps=11 format=3 uid="uid://iefu7853q37u"]

[ext_resource type="Script" path="res://Tutorials/tutorial3.gd" id="1_047n3"]
[ext_resource type="Texture2D" uid="uid://0j0gd37gfemk" path="res://Tutorials/frame_0_delay-0.09s.png" id="2_cbnse"]
[ext_resource type="Texture2D" uid="uid://dqlitp6l4d2sa" path="res://Tutorials/frame_1_delay-0.09s.png" id="3_01m8e"]
[ext_resource type="Texture2D" uid="uid://dkapowncp0h8k" path="res://Tutorials/frame_2_delay-0.09s.png" id="4_sccnd"]
[ext_resource type="Texture2D" uid="uid://b5wv5gbc5sxes" path="res://Tutorials/frame_3_delay-0.09s.png" id="5_0b6f2"]
[ext_resource type="Texture2D" uid="uid://d0mkafj86t2ml" path="res://Tutorials/frame_4_delay-0.09s.png" id="6_xhdv1"]
[ext_resource type="Texture2D" uid="uid://dtbir7oguac84" path="res://Tutorials/frame_5_delay-0.09s.png" id="7_a5lkp"]
[ext_resource type="FontFile" uid="uid://cs1xyqg7valt" path="res://Godot-Fontpack/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" id="8_53qs8"]
[ext_resource type="FontFile" uid="uid://bax17lxjdupj4" path="res://Godot-Fontpack/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="9_xm3ct"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ys03d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cbnse")
}, {
"duration": 1.0,
"texture": ExtResource("3_01m8e")
}, {
"duration": 1.0,
"texture": ExtResource("4_sccnd")
}, {
"duration": 1.0,
"texture": ExtResource("5_0b6f2")
}, {
"duration": 1.0,
"texture": ExtResource("6_xhdv1")
}, {
"duration": 1.0,
"texture": ExtResource("7_a5lkp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="tutorial_page_3" type="Node2D"]
script = ExtResource("1_047n3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(572, 324.5)
scale = Vector2(3.80263, 2.79915)
sprite_frames = SubResource("SpriteFrames_ys03d")
autoplay = "default"

[node name="Label" type="Label" parent="."]
offset_right = 1148.0
offset_bottom = 66.0
theme_override_fonts/font = ExtResource("8_53qs8")
theme_override_font_sizes/font_size = 25
text = "Random Events"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 860.0
offset_top = 575.0
offset_right = 1148.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("9_xm3ct")
text = "Start Game"

[node name="Button2" type="Button" parent="."]
offset_left = 548.0
offset_top = 575.0
offset_right = 836.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("9_xm3ct")
text = "Previous"

[node name="Button3" type="Button" parent="."]
offset_left = 1087.0
offset_top = 3.0
offset_right = 1148.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "X"

[node name="Label2" type="Label" parent="."]
offset_left = 15.0
offset_top = 73.0
offset_right = 1137.0
offset_bottom = 560.0
theme_override_colors/font_shadow_color = Color(0.101961, 0.666667, 0.933333, 1)
theme_override_fonts/font = ExtResource("8_53qs8")
text = "Be careful. Random events can happen and you will need to be prepared when this happens. 
Refer to the reference guide if you need help with the
functions of certain plants and information about the random events that can happen."

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
